Unit test case for BookMyshow Controller